fix: switch from js to php solution on wrapping the comment contents

--- a/css/bricks-comments-addon.css
+++ b/css/bricks-comments-addon.css
@@ -1,3 +1,10 @@
+.bricks-comments-inner {
+    display: grid;
+    grid-template-rows: auto minmax(0, 1fr);
+    grid-template-columns: 1fr;
+    grid-gap: 40px;
+}
+
 .comments__wrapper {
-    margin-top: 40px;
+    order: 1;
 }
